--- a/public/template-2/css/style.css
+++ b/public/template-2/css/style.css
@@ -25,8 +25,7 @@ html, body {
     }
 }
 img.all-cadet-img {
-    position: absolute;
-    top: 20px;
+    display: none;
 }
 .media-screen-inner{display: none;}
 .login-warp{
